@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2002, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2002, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -93,7 +93,7 @@ public class MetaKeywords {
      */
     protected List<String> getClassKeyword(TypeElement typeElement) {
         ArrayList<String> metakeywords = new ArrayList<>(1);
-        String cltypelower = utils.isInterface(typeElement) ? "interface" : "class";
+        String cltypelower = utils.isPlainInterface(typeElement) ? "interface" : "class";
         metakeywords.add(utils.getFullyQualifiedName(typeElement) + " " + cltypelower);
         return metakeywords;
     }
@@ -117,9 +117,9 @@ public class MetaKeywords {
      */
     public List<String> getMetaKeywordsForModule(ModuleElement mdle) {
         if (options.keywords()) {
-            return Arrays.asList(mdle.getQualifiedName() + " " + "module");
+            return List.of(mdle.getQualifiedName() + " " + "module");
         } else {
-            return Collections.emptyList();
+            return List.of();
         }
     }
 
